# lbd-pfs-simple-pandas

./: .gitignore  README.md  calculate.py  prepare.py  pyproject.toml
tests/: test_calculate.py  test_prepare.py  utils.py
